Fix overflow gifs

--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,10 @@
   display: none;
 }
 
+.w--100p {
+  width: 100%;
+}
+
 @keyframes 360-spin {
   from {
     transform: rotate(0deg);
